prepare config json file reader into jar package